methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:83: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  faireV();
        ^MethodsPicture:96: error: not found: value red
  colonnes(red);
           ^